<resources>
    <string name="app_name">Note ToDo Record</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note_pad">Note ToDo Record</string>

    <!-- UI Strings -->
    <string name="total_display_prefix">Total:</string>
    <string name="empty_note_content">This note has only title.</string>
    <string name="add_note_title_new">Add new note</string>
    <string name="add_note_title_edit">Edit note</string>
    <string name="add_note_button_edit">OK</string>
    <string name="add_note_button_add">ADD</string>
    <string name="toggle_todo_name">To Do</string>
    <string name="toggle_notes_name">Notes</string>
    <string name="toggle_records_name">Records</string>
    <string name="label_display_acc_importance">Display according to importance:</string>
    <string name="label_radio_low_main">All</string>
    <string name="label_radio_med_main">Medium+</string>
    <string name="label_radio_high_main">Only High</string>

    <string name="label_importance">Importance:</string>
    <string name="label_radio_low_dialog">Low</string>
    <string name="label_radio_med_dialog">Medium</string>
    <string name="label_radio_high_dialog">High</string>


    <string name="record_file_extension">.3gp</string>
    <string name="record_file_name_prefix">Record</string>
    <string name="record_timer_zero_time">00:00</string>

    <!-- Shared Prefs -->
    <string name="shared_pref_data_separator">,</string>

    <!-- Shared Prefs Keys -->
    <string name="shared_pref_key">NotePad</string>
    <string name="selected_priority_key">SelectedPriority</string>
    <string name="pending_rec_file_num_key">PendingRecFileNum</string>
    <string name="selected_list_type_key">SelectedListType</string>
    <string name="note_data_key">NoteData</string>
    <string name="note_content_key_prefix">NoteContent=</string>
    <string name="todo_data_key">ToDoData</string>
    <string name="record_data_key">RecordData</string>
    <string name="draw_data_key">DrawData</string>



</resources>
